--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>The Ohm-ening is upon us</title>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Josefin Slab', sans-serif;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <header></header>
